# atlassian-innerwork

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: beta_signup.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: product_catalog.json
docs/: README.md  adr-001-edge-platform-shape.md  architecture.html  autonomous-kanban-playbook.md  beta-program.md  collaboration.md  comments-and-idempotency.md  contributor-guide.md  docker-poc.md  grand-design.md  knowledge-graph-domain.md  launch-plan.md  live-application.md  metrics-dashboard.md  migration-guide.md  observability.md  operations-runbook.md  overview.md  phase-6.md  phase10_scoping.md  phase9_scoping.md  post-launch-iteration.md  product-scope.md  product-system-map.md  production-grade-roadmap.md  production-oss-grand-design.md  production-readiness-checklist.md  release.md  roadmap.md  site-outline.md  slos.md  threat-model.md  work-graph-domain.md
docs/archive/: architecture.html  operations-runbook.md  production-readiness-checklist.md
docs/plans/: implementation-plan.md
examples/: edge-service.yaml
research/: software-page-extract.md  source-notes.md  video-transcript.md
scripts/: backup.py  check_anti_hallucination.py  restore.py  rollback_drill.py  validate_openapi_contract.py
spec/: openapi.yaml
src/innerwork/: __init__.py  ai_context.py  analytics.py  app.py  audit.py  broker.py  catalog.py  cli.py  comments.py  control_plane.py  domain.py  domain_api.py  domain_store.py  field_acl.py  knowledge.py  model.py  notify.py  observability.py  permissions.py  portability.py  search.py  serialization.py  sql_state_store.py  state_store.py  state_store_base.py
src/innerwork/data/: production_oss_phases.json
src/innerwork/migrators/: __init__.py  synthetic_fixture.py
tests/: test_ai_context.py  test_analytics.py  test_app.py  test_audit.py  test_backup_restore.py  test_cli.py  test_cli_serve.py  test_comments.py  test_docker_poc_docs.py  test_domain.py  test_domain_api.py  test_domain_cli.py  test_field_acl.py  test_innerwork_model.py  test_knowledge.py  test_knowledge_api.py  test_migration.py  test_notify.py  test_observability.py  test_packaging.py  test_permissions.py  test_persistence.py  test_phase2_contract.py  test_phase6_api.py  test_portability.py  test_product_catalog.py  test_production_oss_phases.py  test_rollback_drill.py  test_search.py  test_threat_model_and_guardrail.py
tests/fixtures/: synthetic_migration.json
