[project]
name = "atlassian-innerwork"
version = "0.1.0"
description = "Reference design for an Atlassian-style self-service edge platform"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "m0n3r0" }]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
