[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "atlassian-innerwork"
version = "0.1.0"
description = "Reference design for an Atlassian-style self-service edge platform"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [{ name = "m0n3r0" }]
keywords = [
    "atlassian",
    "jira",
    "confluence",
    "edge-broker",
    "control-plane",
    "envoy",
    "open-service-broker",
    "platform-engineering",
    "reference-implementation",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.47.0",
]

[project.urls]
Homepage = "https://github.com/m0n3r0/atlassian-innerwork"
Source = "https://github.com/m0n3r0/atlassian-innerwork"
Documentation = "https://github.com/m0n3r0/atlassian-innerwork#readme"
Issues = "https://github.com/m0n3r0/atlassian-innerwork/issues"
Changelog = "https://github.com/m0n3r0/atlassian-innerwork/blob/main/CHANGELOG.md"

[project.scripts]
innerwork = "innerwork.cli:main"

[project.optional-dependencies]
server = ["uvicorn[standard]>=0.47.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["innerwork", "innerwork.data"]
include-package-data = true

[tool.setuptools.package-data]
innerwork = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["scripts"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
